--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ input{
 	font-size: 14px;
 	padding:0 10px;
 	box-sizing: padding-box;
+	-moz-box-sizing: padding-box;
 	-moz-transition: all .5s; 
     -webkit-transition: all .5s; 
     -o-transition: all .5s; 
@@ -181,6 +182,7 @@ ul.level1>li:first-child,ul.level1>li:last-child{
 	border: 60px solid;
 	padding: 0 5px;
 	box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
 
 /* Cut one part of start of navigation bar */
@@ -374,6 +376,7 @@ ul.level2>li:last-child{border-bottom: 5px solid #3db4f2;}
 
 .reviews p, .reviews h2{
 	box-sizing:padding-box;
+	-moz-box-sizing:padding-box;
 	width: 75%;
 	position: absolute;
 	right: 0;
