--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ ul.level2>li:last-child{border-bottom: 5px solid #3db4f2;}
 	height:200px;
 }
 
-.reviews img{
+.reviews img, .games-reviews img, .container-review img{
 	width: 22%;
 	float: left;
 }
@@ -374,6 +374,11 @@ ul.level2>li:last-child{border-bottom: 5px solid #3db4f2;}
 
 /** Home page & Game page */
 
+.games-reviews{
+	width:75%;
+	left: 25%;
+}
+
 .reviews p, .reviews h2{
 	box-sizing:padding-box;
 	-moz-box-sizing:padding-box;
@@ -392,11 +397,25 @@ ul.level2>li:last-child{border-bottom: 5px solid #3db4f2;}
 	bottom: 0px;
 }
 
-/** Games page */
 
-.games-reviews{
+
+/** Game review page */
+
+/** Style of a game review */
+.container-review{
 	width: 75%;
-	left: 25%;
+	left: 12.5%;
+	position:relative;
+}
+
+.type{margin: 10px 0;}/** Game type list style */
+
+/*
+	Brief style for text of a game review
+ */
+.brief{
+	position:relative;
+	left: 4%;
 }
 
 /** Register and login */
@@ -493,19 +512,6 @@ ul.level2>li:last-child{border-bottom: 5px solid #3db4f2;}
     }
 	
 }
-
-/**
-@media screen and (max-width: 960px) {
-	
-	
-    .left{display: none;}
-	
-    .center{
-    	width:100%;
-    	left:0%;
-    }
-
-}*/
 
 @media screen and (max-width: 960px) {
 
